<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_loading_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_2_layout">

            <LinearLayout
                android:id="@+id/layout_title"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingTop="14dp"
                android:paddingBottom="13dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/gray_14"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_8"/>

            <LinearLayout
                android:id="@+id/iv_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/title_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/blue_2"
                    android:text="@string/dialog_photo_title"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:gravity="center"
                android:id="@+id/iv_select">

                <TextView
                    android:id="@+id/title_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/blue_2"
                    android:text="@string/dialog_photo_title2"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_8"/>

            <LinearLayout
                android:id="@+id/ll_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:gravity="center"
                android:visibility="gone"
                >

                <TextView
                    android:id="@+id/title_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/blue_2"
                    android:text="@string/delete_comment"/>

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_2_dialog_photo2">

            <LinearLayout
                android:id="@+id/iv_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/blue_2"
                    android:text="@string/dialog_photo_title3"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>