<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_12"
        android:gravity="right">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/set"
            android:id="@+id/login_show"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_login"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:paddingLeft="@dimen/padding_18"
        android:paddingRight="@dimen/padding_18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_12"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/linearlayout_login">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:background="@mipmap/zhanghu"/>
                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_12"
                    android:hint="@string/prompt_login_name"
                    android:inputType="textEmailAddress"
                    android:background="@null"
                    android:maxLines="1"
                    android:singleLine="true" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_12"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/linearlayout_login">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:background="@mipmap/mima"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_12"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:maxLines="1"
                    android:singleLine="true" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_50"
                android:paddingLeft="@dimen/height_30"
                android:paddingRight="@dimen/height_30"
                android:gravity="center_vertical"
                android:background="@drawable/linearlayout_login">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_40"
                    android:id="@+id/spinner_sysinformation"
                    android:entries="@array/sys_information"
                    android:background="#fff"/>

            </LinearLayout>

            <!--<LinearLayout
                android:id="@+id/linLayoutUserinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/cbx_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/selector_checkbox1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:text="@string/register_hint1"
                    android:textSize="12sp"
                    android:textColor="@color/gray"/>

                <TextView
                    android:id="@+id/tv_openUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_hint2"
                    android:textSize="12sp"
                    android:textColor="@color/btn_blue_normal"/>

            </LinearLayout>-->

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="@dimen/padding_12"
            android:gravity="center">

            <ImageView
                android:id="@+id/xuanzhuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/xuanzhuan"/>
            <TextView
                android:paddingLeft="@dimen/padding_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="新屹软件"/>


        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/main_"></LinearLayout>

</LinearLayout>
